plugins {
    `java-library`
    checkstyle
    id("com.github.spotbugs") version "6.0.17"
    `maven-publish`
    jacoco
}


// The root project doesn't produce a JAR.
tasks["jar"].enabled = false

repositories {
    mavenLocal()
    mavenCentral()
}

// SUBPROJECT SETTINGS
subprojects {
    val subproject = this

    // Set up main java project
    if (subproject.name != "foo-bar") {
        apply(plugin = "java-library")
        apply(plugin = "jacoco")

        java {
            sourceCompatibility = JavaVersion.VERSION_17
            targetCompatibility = JavaVersion.VERSION_17
        }

        tasks.withType<JavaCompile> {
            options.encoding = "UTF-8"
        }

        // Use Junit5's test runner.
        tasks.withType<Test> {
            useJUnitPlatform()
        }

        tasks.test {
            finalizedBy(tasks.jacocoTestReport) // report is always generated after tests run
        }
        tasks.jacocoTestReport {
            dependsOn(tasks.test) // tests are required to run before generating the report
        }

        // Apply junit 5 and hamcrest test dependencies to all java projects.
        dependencies {
            testImplementation("org.junit.jupiter:junit-jupiter-api:5.4.0")
            testImplementation("org.junit.jupiter:junit-jupiter-engine:5.4.0")
            testImplementation("org.junit.jupiter:junit-jupiter-params:5.4.0")
            testImplementation("org.hamcrest:hamcrest:2.1")
        }

        // Configure jars to include license related info
        // tasks.jar {
        //     inputs.property("moduleName", subproject.extra["moduleName"])
        //     manifest {
        //         attributes["Automatic-Module-Name"] = subproject.extra["moduleName"]
        //     }
        // }

        /*
         * Spotbugs
         * ====================================================
*/
        apply(plugin = "com.github.spotbugs")

        // We don't need to lint tests.
        tasks["spotbugsTest"].enabled = false
        // Enable on demand, is super slow and gives a ton of false positives.
        tasks["spotbugsMain"].enabled = false

        // Configure the bug filter for spotbugs.
        spotbugs {
            val excludeFile = File("${project.rootDir}/config/spotbugs/filter.xml")
            if (excludeFile.exists()) {
                excludeFilter.set(excludeFile)
            }

        }
        tasks.spotbugsMain {
            reports.create("html") {
                required.set(true)
                outputLocation.set(file("$buildDir/reports/spotbugs.html"))
                setStylesheet("fancy-hist.xsl")
            }
        }

        repositories {
            mavenLocal()
            mavenCentral()
        }
    }
}
